<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">网易云音乐</string>
    <string name="share">分享</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="no_net">无可用网络</string>
    <string name="net_ok">网络状况良好</string>
    <string name="net_wrong">当前网络状态不可用，请检查你的网络设置</string>
    <string name="change_item">调整栏目顺序</string>
    <string name="local_music">本地音乐</string>
    <string name="drag_item">拖拽条目</string>
    <string name="drag_info">想调整首页栏目的顺序？按住右边的按钮拖动即可</string>
    <string name="default_order">恢复默认排序</string>
    <string name="search_txt">搜索音乐、歌手、歌词、用户</string>
    <string name="check_net">当前网络不可用，请检查你的网络设置</string>
    <string name="detail_txt">(0)</string>
    <string name="detail_expand_creat">创建的歌单 (0)</string>
    <string name="detail_expand_collect">收藏的歌单 (0)</string>
    <string name="search_local">搜索本地歌曲</string>
    <string name="scan">扫描歌曲</string>
    <string name="sequence">选择排序方式</string>
    <string name="list_lrc">一键获取封面歌词</string>
    <string name="tone_quality">升级音质</string>
    <string name="play_all">播放全部</string>
    <string name="getlrc">获取封面和歌词</string>
    <string name="default_time">00:00</string>
    <string name="durationformatshort" translatable="false"><xliff:g id="format">%2$d:%3$02d</xliff:g></string>
    <string name="durationformatlong" translatable="false"><xliff:g id="format">%1$d:%2$02d:%3$02d</xliff:g></string>
    <string-array name="drag_lv_data">
        <item>推荐歌单</item>
        <item>独家放送</item>
        <item>最新音乐</item>
        <item>推荐MV</item>
        <item>主播电台</item>
    </string-array>
    <string-array name="music_icn_data">
        <item>本地音乐</item>
        <item>最近播放</item>
        <item>下载管理</item>
        <item>我的歌手</item>
        <item>我的电台</item>
        <item>我的MV</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="return_destop">再按一次返回桌面</string>
</resources>
